# chatgpt-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
chatgpt_mcp/: __init__.py  __main__.py  chatgpt_automation.py  list_conversations.applescript  mcp_tools.py  read_chatgpt_screen.applescript
tests/: test_chatgpt_automation.py  test_mcp_tools.py
